zero-schema-derive/tests/ui/fail/11_api_names.stderr
error: variant name conflicts with generated API
 --> tests/ui/fail/11_api_names.rs:2:49
  |
2 | #[derive(ZeroSchema)] #[repr(u8)] enum Scalar { Wire=1 }
  |                                                 ^^^^

error: variant name conflicts with generated API
 --> tests/ui/fail/11_api_names.rs:4:77
  |
4 | #[derive(ZeroSchema)] #[zero(tag=Tag)] enum Union { #[zero(tag=Tag::Parse)] Wire }
  |                                                                             ^^^^
